# ProtoTrainer

./: README.md  pyproject.toml
src/ProtoTrainer/core/: context.py  trainer.py
src/ProtoTrainer/core/generic/: base_context.py  base_enum.py  base_logger.py  base_mixin.py  interface.py
src/ProtoTrainer/presets/: logger.py  mixins.py  test.py
src/ProtoTrainer/tests/: test_configparser.py  test_dispatcher.py
src/ProtoTrainer/utils/: cfg_loader.py  dispatcher.py
