[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ProtoTrainer"
version = "0.0.1"
authors = [
  { name="Samed Dogan", email="samed.dogan@hm.edu"},
]
description = "Small package for fast deep learning prototyping using accelerate"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = ""
Issues = ""