[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ProtoTrainer"
version = "0.0.3"
authors = [
  { name="Samed Dogan", email="samed.dogan@hm.edu"},
]
description = "Small package for fast deep learning prototyping using accelerate"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "accelerate",
    "datasets",
    "torch==2.1.0",
    "rich",
    "tqdm"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers"
]

[project.urls]
Repository = "https://github.com/smdgn/ProtoTrainer.git"
Issues = "https://github.com/smdgn/ProtoTrainer/issues"